applications/synapse/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: synapse
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
        - name: synapse
          image: matrixdotorg/synapse:latest@sha256:5d6b27645b6c21819c914c1cfa53de24e7e2d6bafb1172a61de530fed16098a3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8008
          volumeMounts:
            - name: synapse-storage
              mountPath: /data
            - name: synapse-config
              mountPath: /data/homeserver.yaml
              subPath: homeserver.yaml
            - name: synapse-config
              mountPath: /data/matrix.tryrocket.cloud.log.config
              subPath: matrix.tryrocket.cloud.log.config
            - name: singing-key
              mountPath: /data/matrix.tryrocket.cloud.signing.key
              subPath: matrix.tryrocket.cloud.signing.key
      volumes:
        - name: synapse-config
          configMap:
            name: synapse-config
        - name: singing-key
          secret:
            secretName: matrix-singing-key
        - name: synapse-storage
          persistentVolumeClaim:
            claimName: synapse-pvc
