applications/synapse/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: synapse
spec:
  ports:
    - port: 80
      targetPort: 8008
      protocol: TCP
      name: http
  selector:
    app: synapse
  type: ClusterIP
