applications/synapse/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: synapse-synapse-http-https-middleware@kubernetescrd
spec:
  tls:
    - hosts:
        - matrix.tryrocket.cloud
      secretName: tryrocket-cloud-http-tls
  rules:
    - host: matrix.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 80
